--- a/puppies.html
+++ b/puppies.html
@@ -45,9 +45,11 @@
         <section class="col-6">
             <h2>No puppies at the moment</h2>
             <figure>
-                <img src="puppy.jpg" alt="Puppy dog" />
-                <figcaption>&copy; P. Mikkola</figcaption>
+                <!--<img src="puppy.jpg" alt="Puppy dog" />-->
+                <img src="puppy.jpg" alt="Black dog and black and gar dog on a frozen lake" />
+                <!--<figcaption>&copy; P. Mikkola</figcaption>-->
             </figure>
+            <a href="https://ferreras.weebly.com/northbay-xsell-diego-de-la-vega.html">Zorro</a><p>x</><a href="riona.html>Riona</a>
         </section>
     </div>
     <div class="row">
