--- a/puppies.html
+++ b/puppies.html
@@ -43,7 +43,7 @@
             </ul>
         </nav>
         <section class="col-6">
-            <h2>No puppies at the moment</h2>
+            <h2>Puppies expected</h2>
             <figure>
                 <!--<img src="puppy.jpg" alt="Puppy dog" />-->
                 <img src="puppy.jpg" alt="Black dog and black and gar dog on a frozen lake" />
