--- a/puppies.html
+++ b/puppies.html
@@ -46,10 +46,10 @@
             <h2>Puppies expected</h2>
             <figure>
                 <!--<img src="puppy.jpg" alt="Puppy dog" />-->
-                <img src="puppy.jpg" alt="Black dog and black and gar dog on a frozen lake" />
+                <img src="riona_ja_zorro_1.jpg" alt="Black dog and black and gray dog on a frozen lake" />
                 <!--<figcaption>&copy; P. Mikkola</figcaption>-->
             </figure>
-            <a href="https://ferreras.weebly.com/northbay-xsell-diego-de-la-vega.html">Zorro</a><p>x</><a href="riona.html>Riona</a>
+            <a href="https://ferreras.weebly.com/northbay-xsell-diego-de-la-vega.html">Zorro</a><p>x</p><a href="riona.html>Riona</a>
         </section>
     </div>
     <div class="row">
