--- a/puppies.html
+++ b/puppies.html
@@ -49,7 +49,7 @@
                 <img src="riona_ja_zorro_1.jpg" alt="Black dog and black and gray dog on a frozen lake" />
                 <!--<figcaption>&copy; P. Mikkola</figcaption>-->
             </figure>
-            <p><a href="https://ferreras.weebly.com/northbay-xsell-diego-de-la-vega.html">Zorro</a> x <a href="riona.html">Riona</a></p>
+            <p id="parents"><a href="https://ferreras.weebly.com/northbay-xsell-diego-de-la-vega.html">Zorro</a> x <a href="riona.html">Riona</a></p>
         </section>
     </div>
     <div class="row">
